# MIMO-TTS

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  exp.dm  plan.md  requirements-dev.txt  requirements.txt
app/: __init__.py  config.py  main.py
app/models/: schemas.py
app/routers/: tts.py
app/services/: tts_service.py
examples/: docker-compose.yml
src/: auth.rs  config.rs  error.rs  main.rs  rate_limit.rs  sanitize.rs  security_headers.rs
src/api/: health.rs  legado.rs  mod.rs  speak.rs  voices.rs
src/tts/: mod.rs  service.rs  speed.rs  split.rs  voices.rs  wav.rs
tests/: conftest.py  test_routes.py  test_tts_service.py
