[package]
name = "mimo-tts-legado"
version = "0.2.0"
edition = "2024"

[dependencies]
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "net", "signal", "time"] }
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
base64 = "0.22"
hound = "3.5"
regex = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
http = "1"
subtle = "2"
dotenvy = "0.15"
thiserror = "2"
dashmap = "6"
uuid = { version = "1", features = ["v4"] }
anyhow = "1"

[dev-dependencies]
axum-test = "16"
tokio-test = "0.4"
wiremock = "0.6"
